--- a/src/styles.css
+++ b/src/styles.css
@@ -559,3 +559,68 @@ video {
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }
+
+.login{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightblue;
+  height: 100vh;
+
+  h1{
+    margin-top: 40px;
+    font-size: 40px;
+    color: black;
+    margin-bottom: 10px;
+    margin-left: 20px;
+  }
+
+  form{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background-color: white;
+    width: 350px;
+    gap: 20px;
+  }
+
+  input{
+    padding: 10px;
+    border: 1px solid gray;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  button{
+    padding: 10px;
+    height: 50px;
+    border: none;
+    background-color: teal;
+    cursor: pointer;
+    color: white;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 60px;
+  }
+  a {
+    color: blue;
+    text-decoration: underline;
+  }
+
+  a:hover {
+    background-color: gold;
+  }
+
+  p{
+    font-size: 15px;
+    text-align: center;
+    color: red;
+  }
+  span{
+    font-size: 15px;
+    flex-direction: column;
+    text-align: center;
+  }
+
+}
