--- a/src/styles.css
+++ b/src/styles.css
@@ -632,6 +632,28 @@ video {
 
 }
 
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: white }
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-out forwards; 
+}
+
+
+
 .ub {
 
   display: inline-block;
