--- a/src/styles.css
+++ b/src/styles.css
@@ -631,3 +631,20 @@ video {
   }
 
 }
+
+.ub {
+
+  display: inline-block;
+  background-image: linear-gradient(#65a8f6 0 0);
+  background-position: 0 100%; /*OR bottom left*/
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition:
+    background-size 0.3s,
+    background-position 0s 0.3s; /*change after the size immediately*/
+
+}
+.ub:hover {
+  background-position: 100% 100%; /*OR bottom right*/
+  background-size: 100% 2px;
+}
