--- a/src/styles.css
+++ b/src/styles.css
@@ -678,7 +678,7 @@ video {
 .ub:hover {
   background-position: 100% 100%; /*OR bottom right*/
   background-size: 100% 2px;
-}x
+}
 
 .accountbackground {
 
